# helved-performance

./: .gitignore  Cargo.toml  Dockerfile  README.md  nais.yml
.github/workflows/: deploy.yml
src/: client.rs  dto.rs  job.rs  kafka.rs  main.rs  models.rs  routes.rs  server.rs  utsjekk.rs
