[package]
name = "helved-performance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = { version = "0.4.38", features = ["serde", "clock"], default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

uuid = { version = "1.11.0", features = ["serde", "v4"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
actix-web = "4.9.0"

[profile.release]
lto = true
opt-level = 3