[package]
name = "helved-performance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.40", features = ["serde", "clock"], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
rdkafka = { version = "0.37.0", features = ["ssl"] }
twox-hash = "2.1.0"

uuid = { version = "1.15.1", features = ["serde", "v4"] }
rand = { version = "0.9.0", features = ["thread_rng"] }
reqwest = { version = "0.12.12", features = ["json"] }
actix-web = "4.9.0"
log4rs = { version = "1.3.0", features = ["json_encoder"] }
log = "0.4.26"

