[package]
name = "helved-performance"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde", "clock"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rdkafka = { version = "0.38.0", features = ["ssl"] }
twox-hash = "2.1.1"

uuid = { version = "1.17.0", features = ["serde", "v4"] }
actix-web = "4.11.0"
log4rs = { version = "1.3.0", features = ["json_encoder"] }
log = "0.4.27"

